# VisualCoreEnterpriseEdition

./: .gitignore  LICENSE  README.md  requirements.txt  test_vclib_import.py
Config/: transformation_matrix.json
app/: bootstrap.py  main.py
configs/: config.yaml  config.yaml.backup_20251031_010949  config.yaml.backup_20251031_111219  config.yaml.backup_20251031_130734  config.yaml.backup_20251031_133726  config.yaml.backup_20251031_133753  config.yaml.backup_20251031_135951  config.yaml.backup_20251031_140013  config.yaml.backup_20251031_140021  config.yaml.backup_20251031_161636  config.yaml.backup_20251114_124608  config.yaml.backup_20251114_125356  config.yaml.backup_20251114_125908  config.yaml.backup_20251114_125921  config.yaml.backup_20251114_153946  config.yaml.backup_20251114_160020  config.yaml.backup_20251114_163751  config.yaml.backup_20251114_163812  transformation_matrix.json.backup_20251118_104033  transformation_matrix_backup2.json
docker/: .dockerignore  DOCKER_GUIDE_RK3588.md  Dockerfile  Dockerfile.gpu  Dockerfile.rk3588  QUICK_START.md  README.md  docker-build-rk3588.sh  docker-build.bat  docker-compose.gpu.yml  docker-compose.rk3588.yml  docker-compose.yml  requirements-rk3588.txt
docs/: API接口使用手册.md  C++模块编译指南.md  CPP_DETECTION_INTEGRATION.md  MEMORY_MANAGEMENT.md  README.md  ROBOT_FEEDBACK_CONTROL.md  SEGFAULT_FIX.md  architecture.md  calibration_workflow.md  configuration.md  deployment.md  development.md  故障排查手册.md  标定操作手册.md  系统安装配置手册.md
domain/enums/: commands.py  errors.py
domain/models/: mqtt.py
handlers/: calibration.py  camera.py  config.py  context.py  detection.py  system.py
infrastructure/Mv3dRgbdImport/: Mv3dRgbdApi.py
infrastructure/sick/common/: Control.py  Stream.py  __init__.py
infrastructure/sick/common/Protocol/: ColaB.py  ColaBase.py
infrastructure/sick/common/Streaming/: BlobServerConfiguration.py  Data.py  XMLParser.py
infrastructure/sick_visionary_cpp_shared/src/: TcpSocket.cpp
infrastructure/sick_visionary_cpp_shared/tests/: CMakeLists.txt
infrastructure/sick_visionary_cpp_shared/tests/src/: CoLa2ProtocolHandlerTest.cpp  MockTransport.cpp  MockTransport.h  VisionaryTMiniDataTest.cpp
infrastructure/yolov8-seg-thread-stream/: CMakeLists.txt  yunyan_simple_config.ini  yunyan_simple_config_usb.ini
infrastructure/yolov8-seg-thread-stream/src/: img_demo.cpp  thread_pool_demo.cpp  usb_and_rtsp_to_rtsp_demo.cpp
infrastructure/yolov8-seg-thread-stream/src/draw/: cv_draw.cpp  cv_draw.h
infrastructure/yolov8-seg-thread-stream/src/engine/: rknn_engine.cpp
infrastructure/yolov8-seg-thread-stream/src/process/: postprocess.cpp  postprocess.h  preprocess.cpp
infrastructure/yolov8-seg-thread-stream/src/rkmedia/utils/: mpp_decoder.cpp  mpp_decoder.h
infrastructure/yolov8-seg-thread-stream/src/task/: yolov8_custom.cpp  yolov8_custom.h  yolov8_thread_pool.cpp  yolov8_thread_pool.h
infrastructure/yolov8-seg-thread-stream/src/types/: yolo_datatype.h
infrastructure/yolov8-seg-thread-stream/src/utils/: engine_helper.h
scripts/: check_memory.ps1  check_memory.sh  clear_cache.sh  install.sh  monitor_memory.py  visioncore.service
services/calibration/: __init__.py  black_block_detector.py  calibrator.py
services/camera/: cpp_camera.py  hik_tof.py  sick_camera.py
services/comm/: comm_manager.py  command_router.py  mqtt_client.py  tcp_server.py
services/comm/handlers/: calibration.py  camera.py  config.py  context.py  detection.py  sftp.py  system.py  tcp.py  utils.py
services/cpp/: CMakeLists.txt  README_Windows.md  SampleVisionaryTMini.cpp  VisionaryCameraLib.cpp  VisionaryCameraLib.h  bindings.cpp  build.bat  build.ps1  build.sh  build_simple.bat  clean.bat  clean.sh
services/cpp/camera/: CMakeLists.txt
services/cpp/detection/: CMakeLists.txt  DetectorLib.h  RKNNDetector.cpp  RKNNDetector.h  bindings.cpp
services/cpp/tests/: run_all_tests.sh  test_camera.py  test_detection.py
services/detection/: __init__.py  base.py  coordinate_processor.py  cpp_backend.py  factory.py  pc_ultralytics.py  rknn_backend.py  roi.py  roi_processor.py  target_selector.py  visualizer.py
services/detection/cpp/: README.md  clean.sh
services/detection/cpp/yolov8-seg-thread-stream/: CMakeLists.txt
services/servo/: gpio.py  test_gpio.py
services/sftp/: sftp_client.py
services/shared/: __init__.py  calibration_utils.py  image_utils.py  sftp_helper.py
services/system/: initializer.py  log_manager.py  monitor.py
soem/: README.md  USAGE.md  __init__.py  config_example.yaml  ethercat_master.py  requirements.txt  servo_drive.py  test_master.py  xinje_servo.py
soem/examples/: __init__.py  xinje_example.py
tests/: README.md  quick_tcp_test.py  test_cpp_camera.py  test_cpp_detection_integration.py  test_tcp_client.py
tools/: calculate_transformation_matrix.py
